[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Simon Siegler <simon@simon-siegler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9"
thiserror = "1"
regex = "1"
lazy_static = "1"
bytecount = "0.6"
bit-vec = "0.6.3"